--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,6 @@ outputs:
     description: "Output returned by your Helm or kubectl command"
 runs:
   using: "docker"
-  image: "Dockerfile"
+  image: "docker://oriarditi/helm-eks-action:v1.0.0"
   args:
     - ${{ inputs.command }}
